# uim

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  COPYING  ChangeLog.old  ChangeLog.old.2  INSTALL  INSTALL.ja  Makefile.am  NEWS  NEWS.md  README  README.ja  RELEASING  RELNOTE  Rakefile  autogen.sh  compose.yaml  config.rpath  configure.ac  dist.sh  docker-compose.yml  entry.c  extract-news.rb  gnuify-changelog.pl  intltool-extract.in  intltool-merge.in  intltool-update.in  make-dist.sh  make-wc.sh  setup.sh  test.sh.in  uim.desktop  uim.desktop.in  uim.desktop.in.in  uim.pc.in  uim.spec.in
emacs/: COPYING  Makefile.am  README  README.ja  README.jp  callback.c  callback.h  candidate.c  candidate.h  commit.c  commit.h  context.c  context.h  debug.c  debug.h  encoding.c  encoding.h  helper-message.c  helper-message.h  helper-server.c  helper-server.h  helper.c  helper.h  im.c  im.h  key.c  key.h  output.c  output.h  preedit.c  preedit.h  prop.c  prop.h  uim-candidate.el  uim-debug.el  uim-el-agent.c  uim-el-agent.h  uim-el-helper-agent.c  uim-el-helper-agent.h  uim-el-types.h  (+9 more)
fep/: COPYING  INSTALL  Makefile.am  README  README.ja  README.key  callbacks.c  callbacks.h  draw.c  draw.h  escseq.c  escseq.h  helper.c  helper.h  key.c  key.h  read.c  read.h  str.c  str.h  udsock.c  udsock.h  uim-fep-tick.c  uim-fep.c  uim-fep.h
gtk/: Makefile.am  caret-state-indicator.c  caret-state-indicator.h  compose.c  compose.h  gtk-im-uim.c  gtk-im-uim.h  gtk-rc-get-immodule-file.c  key-util-gtk.c  key-util-gtk.h  text-util.c  text-util.h  uim-cand-win-gtk.c  uim-cand-win-gtk.h  uim-cand-win-tbl-gtk.c  uim-cand-win-tbl-gtk.h  uim-eb.c  uim-eb.h
helper/: GNOME_UimApplet.server.in.in  Makefile.am  UimApplet.panel-applet.in.in  candwin-gtk.c  candwin-tbl-gtk.c  dict-anthy.c  dict-anthy.h  dict-canna-cclass.c  dict-canna-cclass.h  dict-canna.c  dict-canna.h  dict-cclass-dialog.c  dict-cclass-dialog.h  dict-dict.c  dict-dict.h  dict-main-gtk.c  dict-util.c  dict-util.h  dict-word-list-view-gtk.c  dict-word-list-view-gtk.h  dict-word-list-win-gtk.c  dict-word-list-win-gtk.h  dict-word-win-gtk.c  dict-word-win-gtk.h  dict-word.c  dict-word.h  eggtrayicon.c  eggtrayicon.h  helper-candwin-gtk.c  im-switcher-gtk.c  input-pad-ja.c  org.gnome.panel.applet.UimAppletFactory.service.in  pref-gtk-custom-widgets.c  pref-gtk-custom-widgets.h  pref-gtk-keytab.h  pref-gtk.c  toolbar-applet-gnome.c  toolbar-applet-gnome3.c  toolbar-common-gtk.c  toolbar-standalone-gtk.c  (+3 more)
m4/: ChangeLog  Makefile.am  ac_cxx_have_stl.m4  ac_cxx_namespace.m4  ax_func_sigsetjmp.m4  ax_path_qmake4.m4  ax_path_qmake5.m4  ax_path_qmake6.m4  eb4.m4  expat.m4  openssl.m4  wnn.m4  xft.m4  xkb.m4
notify/: CMakeLists.txt  Makefile.am  uim-growl.m  uim-knotify.cc  uim-knotify.h  uim-knotify3.cc  uim-knotify4.cpp  uim-libnotify.c  uim-libnotify.h
pixmaps/: AUTHORS  COPYING  COPYING.BSDL  COPYING.LGPL  ChangeLog  LIST  Makefile.am  README  indication-id.txt  uim-m17nlib-relink-icons.in
qt/: Makefile.am  candwin-qt.cpp  candwin-qt.h  chardict-bushuviewwidget.cpp  chardict-bushuviewwidget.h  chardict-chargridview.cpp  chardict-chargridview.h  chardict-kseparator.cpp  chardict-qt.cpp  chardict-qt.h  chardict-unicodeviewwidget.cpp  chardict-unicodeviewwidget.h  immodule-candidatewindow.cpp  immodule-candidatewindow.h  immodule-plugin.cpp  immodule-plugin.h  immodule-qhelpermanager.cpp  immodule-qhelpermanager.h  immodule-qtextutil.cpp  immodule-qtextutil.h  immodule-quiminfomanager.cpp  immodule-quiminfomanager.h  immodule-quiminputcontext.cpp  immodule-quiminputcontext.h  immodule-quiminputcontext_compose.cpp  immodule-quiminputcontext_compose.h  immodule-quiminputcontext_with_slave.cpp  immodule-quiminputcontext_with_slave.h  immodule-subwindow.cpp  immodule-subwindow.h  pref-customwidgets.cpp  pref-customwidgets.h  pref-keyeditformbase.ui  pref-keygrabformbase.ui  pref-kseparator.cpp  pref-olisteditformbase.ui  pref-qt.cpp  pref-qt.h  qtgettext.h  switcher-qt.cpp  (+10 more)
replace/: Makefile.am  bsd-asprintf.c  bsd-misc.c  bsd-poll.c  bsd-snprintf.c  bsd-waitpid.c  daemon.c  fake-rfc2553.c  fake-rfc2553.h  getpeereid.c  os_dep.h  setenv.c  strlcat.c  strlcpy.c  strsep.c  strtoll.c  strtonum.c
scm/: Makefile.am  PY.scm  action.scm  ajax-ime-custom.scm  ajax-ime-key-custom.scm  ajax-ime.scm  annotation-custom.scm  annotation-dict.scm  annotation-eb.scm  annotation-filter.scm  annotation-osx-dcs.scm  annotation.scm  anthy-custom.scm  anthy-key-custom.scm  anthy-utf8-custom.scm  anthy-utf8.scm  anthy.scm  baidu-olime-jp-custom.scm  baidu-olime-jp-key-custom.scm  baidu-olime-jp.scm  byeoru-custom.scm  byeoru-dic.scm  byeoru-key-custom.scm  byeoru-symbols.scm  byeoru.scm  canna-custom.scm  canna-key-custom.scm  canna.scm  cannav3-socket.scm  choosable.scm  chooser.scm  composer.scm  ct.scm  custom-rt.scm  custom-vars.scm  custom.scm  default.scm  deprecated-util.scm  dict-socket.scm  direct.scm  (+164 more)
sigscheme/: AUTHORS  COPYING  MEMO  Makefile.am  NEWS  QALog  README  TODO  alloc.c  autogen.sh  basecport.c  baseport.h  c_template  compare-scm.sh  config.h  configure.in  constants.c  datas.c  debug.c  encoding.c  encoding.h  env.c  error.c  eval.c  fileport.c  fileport.h  gc.c  h_template  io.c  main.c  make-report.sh  mbcport.c  mbcport.h  nullport.c  nullport.h  operations-new-srfi34.c  operations-nonstd.c  operations-r5rs-deepcadrs.c  operations-siod.c  operations-srfi1.c  (+38 more)
tables/: Makefile.am  japanese-azik.table  japanese-kana.table  japanese-roma.table  japanese-tcode.table  japanese-tutcode.table  korean-hangul2.table  korean-hangul3.table
test/: Makefile.am  broken-test-db.scm  run-test.scm  template.scm  test-action.scm  test-anthy.scm  test-custom-rt.scm  test-custom.scm  test-db.scm  test-event.scm  test-evmap-csv.scm  test-evmap.scm  test-example.scm  test-i18n.scm  test-iconv.scm  test-im.scm  test-intl.scm  test-key.scm  test-lazy-load.scm  test-legacy-api-bridge.scm  test-ng-key.scm  test-plugin.scm  test-slib.scm  test-trec.scm  test-uim-test-utils.scm  test-uim-util.scm  test-ustr.scm  test-util.scm  (+4 more)
(+1118 files in other folders)
